@@ -1,5 +1,5 @@
 <div id='evId_<{$event.id}>' class='wge-panel'>
-    <div class='panel-heading center wge-eventheader'><h4><span><{$event.name}></span><span class="wge-identifier"><{$event.identifier}></span></h4></div>
+    <div class='panel-heading center wge-eventheader'><h4><span><{$event.name}></span><{if $event.identifier|default:false}><span class="wge-identifier"><{$event.identifier}></span><{/if}></h4></div>
     <div class='panel-body'>
         <div class="row">
             <div class="col-xs-12 col-sm-2">
@@ -31,19 +31,21 @@
             <{if $event.canceled|default:false}>
             <span class="badge badge-danger wge-badge-index"><{$smarty.const._MA_WGEVENTS_STATUS_CANCELED}></span>
             <{/if}>
-            <{if $showItem|default:''}>
-                <a class='btn btn-success right wge-btn' href='event.php?op=list&amp;filter=<{$filter}>&amp;start=<{$start}>&amp;limit=<{$limit}>#evId_<{$event.id}>' title='<{$smarty.const._MA_WGEVENTS_EVENTS_LIST}>'><{$smarty.const._MA_WGEVENTS_EVENTS_LIST}></a>
-            <{else}>
-                <a class='btn btn-success right wge-btn' href='event.php?op=show&amp;id=<{$event.id}>&amp;filter=<{$filter}>&amp;start=<{$start}>&amp;limit=<{$limit}>' title='<{$smarty.const._MA_WGEVENTS_DETAILS}>'><{$smarty.const._MA_WGEVENTS_DETAILS}></a>
-            <{/if}>
-            <{if $event.register_use|default:0 > 0}>
-                <a class='btn btn-primary wge-btn' href='registration.php?op=listeventmy&amp;redir=listeventmy&amp;evid=<{$event.id}>' title='<{$smarty.const._MA_WGEVENTS_REGISTRATION_GOTO}>'><{$smarty.const._MA_WGEVENTS_REGISTRATION_GOTO}></a>
-            <{/if}>
-            <{if $permEdit|default:''}>
-                <a class='btn btn-success right wge-btn' href='event.php?op=edit&amp;id=<{$event.id}>&amp;start=<{$start}>&amp;limit=<{$limit}>' title='<{$smarty.const._EDIT}>'><{$smarty.const._EDIT}></a>
-                <a class='btn btn-primary right wge-btn' href='event.php?op=clone&amp;id_source=<{$event.id}>' title='<{$smarty.const._CLONE}>'><{$smarty.const._CLONE}></a>
-                <a class='btn btn-danger right wge-btn' href='event.php?op=delete&amp;id=<{$event.id}>' title='<{$smarty.const._DELETE}>'><{$smarty.const._DELETE}></a>
-            <{/if}>
+            <span class='col-sm-12'>
+                <{if $showItem|default:''}>
+                    <a class='btn btn-success right wge-btn' href='event.php?op=list&amp;filter=<{$filter}>&amp;start=<{$start}>&amp;limit=<{$limit}>#evId_<{$event.id}>' title='<{$smarty.const._MA_WGEVENTS_EVENTS_LIST}>'><{$smarty.const._MA_WGEVENTS_EVENTS_LIST}></a>
+                <{else}>
+                    <a class='btn btn-success right wge-btn' href='event.php?op=show&amp;id=<{$event.id}>&amp;filter=<{$filter}>&amp;start=<{$start}>&amp;limit=<{$limit}>' title='<{$smarty.const._MA_WGEVENTS_DETAILS}>'><{$smarty.const._MA_WGEVENTS_DETAILS}></a>
+                <{/if}>
+                <{if $event.register_use|default:0 > 0}>
+                    <a class='btn btn-primary wge-btn' href='registration.php?op=listeventmy&amp;redir=listeventmy&amp;evid=<{$event.id}>' title='<{$smarty.const._MA_WGEVENTS_REGISTRATION_GOTO}>'><{$smarty.const._MA_WGEVENTS_REGISTRATION_GOTO}></a>
+                <{/if}>
+                <{if $permEdit|default:''}>
+                    <a class='btn btn-success right wge-btn' href='event.php?op=edit&amp;id=<{$event.id}>&amp;start=<{$start}>&amp;limit=<{$limit}>' title='<{$smarty.const._EDIT}>'><{$smarty.const._EDIT}></a>
+                    <a class='btn btn-primary right wge-btn' href='event.php?op=clone&amp;id_source=<{$event.id}>' title='<{$smarty.const._CLONE}>'><{$smarty.const._CLONE}></a>
+                    <a class='btn btn-danger right wge-btn' href='event.php?op=delete&amp;id=<{$event.id}>' title='<{$smarty.const._DELETE}>'><{$smarty.const._DELETE}></a>
+                <{/if}>
+            </span>
         </div>
     </div>
 </div>
